Fix close button on mobile

--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-
-
 body {
   --site-background: white;
   --navbar-background: rgba(255, 204, 0, 0.8);
@@ -110,8 +108,10 @@ body {
 
 .counter {
   padding: 4px 12px;
+  min-height: 38px;
+  min-width: 38px;
   margin: 12px;
-  box-sizing: border-box:
+  box-sizing: border-box;
   border-radius: 100px;
   background-color: var(--counter-background);
   color: var(--text-secondary);
@@ -224,7 +224,7 @@ a {
 .product-description {
   margin-top: 4px;
   margin-bottom: 12px;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 1.2em;
   letter-spacing: 0;
   color: var(--text-secondary);
@@ -259,6 +259,10 @@ ul {
   width: 40px;
   top: 30px;
   right: 30px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 1.6em;
   text-align: center;
   text-transform: none;
